--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     </div>
     <div class="rss">
       <a href="http://dallas-borealis.github.io/atom.xml">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
+        Subscribe to RSS Feed"
       </a>
     </div>
   </div>
