--- a/css/screen.css
+++ b/css/screen.css
@@ -9,6 +9,7 @@ body {
   padding-left: 12.5%;
   font-family: 'Source Serif Pro', sans-serif;
   background-color:  #fcfcfa;
+  color: #333;
   max-width: 1400px;
 }
 
