--- a/css/screen.css
+++ b/css/screen.css
@@ -50,12 +50,13 @@ hr {
 }
 
 p.subtitle {
-    font-style: italic;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    font-size: 1.8rem;
-    display: block;
-    line-height: 1;
+  font-style: italic;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: 1.8rem;
+  display: block;
+  line-height: 1;
+  color: #aaa;
 }
 
 .numeral {
