--- a/css/screen.css
+++ b/css/screen.css
@@ -49,9 +49,9 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding-left: 12.5%;
-    font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-    background-color: #fffff8;
-    color: #111;
+    font-family: 'Source Serif Pro', sans-serif;
+    background-color: #fcfcfa;
+    color: #333;
     max-width: 1400px;
     counter-reset: sidenote-counter;
 }
