--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,17 +16,14 @@
 
       {{ content }}
 
-  <section>
+   <section>
       <p>
-        dallas borealis<br />
-        Sees, saves, shares<br />
-        dallas.borealis@gmail.com
-      </p>
-    </section>
-    <section>
-      <a href="http://dallas-borealis.github.io/atom.xml">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
+         dallas borealis<br />
+         Sees, saves, shares<br />
+         dallas.borealis@gmail.com<br />
+         <a href="http://dallas-borealis.github.io/atom.xml">
+           Subscribe to RSS Feed.
+         </a>
     </section>
   </article>
 
