--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       {{ content }}
 
    <section>
-      <p>
+      <p class="subtitle">
          dallas borealis<br />
          Sees, saves, shares<br />
          dallas.borealis@gmail.com<br />
