--- a/css/screen.css
+++ b/css/screen.css
@@ -104,7 +104,7 @@ p.subtitle {
    font-style: italic;
    margin-top: 1rem;
    margin-bottom: 1rem;
-   font-size: 1.8rem;
+   font-size: 80%;
    display: block;
    line-height: 1;
    color: #aaa;
