--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,19 +11,15 @@
 <body>
   <article>
     <h1><a href="/">dallas borealis</a></h1>
-    <p class="subtitle">Sees, saves, shares</p>
     <section>
 
       {{ content }}
-
+       
+    </section>
    <section>
       <p class="subtitle">
-         dallas borealis<br />
-         Sees, saves, shares<br />
-         dallas.borealis@gmail.com<br />
-         <a href="http://dallas-borealis.github.io/atom.xml">
-           Subscribe to RSS Feed.
-         </a>
+         dallas borealis &#8250; see | save | share
+       </p>
     </section>
   </article>
 
