--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,9 @@ layout: default
 
 <section>
   <h2>Related posts</h2>
-  <p>
+  <ul class="posts">
     {% for post in site.related_posts limit:3 %}
-      {{ post.date | date_to_string }}</span> &#8250; <a href="{{ post.url }}">{{ post.title }}</a><br />
+      <li><span>{{ post.date | date_to_string }}</span> &#8250; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
-  </p>
+  </ul>
 </section>
