--- a/css/screen.css
+++ b/css/screen.css
@@ -1,121 +1,52 @@
-@charset "UTF-8";
-
-/* Import ET Book styles
-   adapted from https://github.com/edwardtufte/et-book/blob/gh-pages/et-book.css */
-
-@font-face {
-    font-family: "et-book";
-    src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot");
-    src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff") format("woff"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf") format("svg");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "et-book";
-    src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot");
-    src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff") format("woff"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf") format("truetype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf") format("svg");
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "et-book";
-    src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
-    src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "et-book-roman-old-style";
-    src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
-    src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-/* Tufte CSS styles */
-html {
-    font-size: 15px;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    width: 87.5%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 12.5%;
-    font-family: 'Source Serif Pro', sans-serif;
-    background-color: #fcfcfa;
-    color: #333;
-    max-width: 1400px;
-    counter-reset: sidenote-counter;
+  width: 87.5%;
+  margin-left: auto
+  margin-right: auto;
+  padding-left: 12.5%;
+  font-family: 'Source Sans Pro', sans-serif;
+  background-color: #fcfcfa;
+  color: #333;
+  max-width: 1400px;
 }
 
-/* Adds dark mode */
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #151515;
-        color: #ddd;
-    }
+h1, h2, h3, h4, h5, h6 {
+  font-size: 100%;
 }
 
 h1 {
-    font-weight: 400;
-    margin-top: 4rem;
-    margin-bottom: 1.5rem;
-    font-size: 3.2rem;
-    line-height: 1;
+  margin-bottom: 1em;
 }
 
-h2 {
-    font-style: italic;
-    font-weight: 400;
-    margin-top: 2.1rem;
-    margin-bottom: 1.4rem;
-    font-size: 2.2rem;
-    line-height: 1;
-}
-
-h3 {
-    font-style: italic;
-    font-weight: 400;
-    font-size: 1.7rem;
-    margin-top: 2rem;
-    margin-bottom: 1.4rem;
-    line-height: 1;
-}
-
-hr {
-    display: block;
-    height: 1px;
-    width: 55%;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+p {
+  margin: 1em 0;
 }
 
 p.subtitle {
-   font-style: italic;
-   margin-top: 1rem;
-   margin-bottom: 1rem;
-   font-size: 80%;
-   display: block;
-   line-height: 1;
-   color: #aaa;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-size: 80%;
+    display: block;
+    line-height: 1;
+    color: #aaa;
 }
 
-.numeral {
-    font-family: et-book-roman-old-style;
+ul.posts {
+  list-style-type: none;
+  margin-bottom: 2em;
 }
 
-.danger {
-    color: red;
+ul.posts li {
+  /* line-height: 1.75em; */
+}
+
+ul.posts span {
+  color: #aaa;
+  font-size: 80%;
 }
 
 article {
@@ -127,19 +58,18 @@ section {
     padding-bottom: 1rem;
 }
 
-p,
-dl,
-ol,
-ul {
-    font-size: 1.4rem;
-    line-height: 2rem;
-}
+a { color: rgba(10, 132, 255, 1); text-decoration: none; }
+a:hover { text-decoration: underline; }
+a:visited { color:rgba(10, 132, 255, 1); }
 
 p {
     margin-top: 1.4rem;
     margin-bottom: 1.4rem;
     padding-right: 0;
     vertical-align: baseline;
+}
+p.meta {
+  color: #aaa;
 }
 
 /* Chapter Epigraphs */
@@ -188,12 +118,12 @@ section > table {
 }
 
 /* 50 + 5 == 55, to be the same width as paragraph */
-section > dl,
+/* section > dl,
 section > ol,
 section > ul {
     width: 50%;
     -webkit-padding-start: 5%;
-}
+} */
 
 dt:not(:first-child),
 li:not(:first-child) {
@@ -228,10 +158,6 @@ figure.fullwidth figcaption {
     margin-right: 24%;
 }
 
-a { color: rgba(10, 132, 255, 1); text-decoration: none; }
-a:hover { text-decoration: underline; }
-a:visited { color:rgba(10, 132, 255, 1); }
-
 /* Sidenotes, margin notes, figures, captions */
 img {
     max-width: 100%;
@@ -245,7 +171,7 @@ img {
     width: 50%;
     margin-top: 0.3rem;
     margin-bottom: 0;
-    font-size: 1.1rem;
+    /* font-size: 1.1rem; */
     line-height: 1.3;
     vertical-align: baseline;
     position: relative;
@@ -447,3 +373,133 @@ label.margin-toggle:not(.sidenote-number) {
         width: 100%;
     }
 }
+
+
+/*****************************************************************************/
+/*
+/* Site
+/*
+/*****************************************************************************/
+
+.site {
+  font-size: 110%;
+  text-align: justify;
+  width: 42em;
+  margin: 3em auto 2em auto;
+  line-height: 1.5em;
+}
+
+.title {
+  color: #a00;
+  font-weight: bold;
+  margin-bottom: 2em;
+}
+
+  .site .title a {
+    color: #a00;
+    text-decoration: none;
+  }
+
+  .site .title a:hover {
+    color: black;
+  }
+
+  .site .title a.extra {
+    color: #aaa;
+    text-decoration: none;
+    margin-left: 1em;
+  }
+
+  .site .title a.extra:hover {
+    color: black;
+  }
+
+  .site .meta {
+    color: #aaa;
+  }
+
+  .site .footer {
+    font-size: 80%;
+    color: #666;
+    border-top: 4px solid #eee;
+    margin-top: 2em;
+    overflow: hidden;
+  }
+
+    .site .footer .contact {
+      float: left;
+      margin-right: 3em;
+    }
+
+      .site .footer .contact a {
+        color: #8085C1;
+      }
+
+    .site .footer .rss {
+      margin-top: 1.1em;
+      margin-right: -.2em;
+      float: right;
+    }
+
+      .site .footer .rss img {
+        border: 0;
+      }
+
+/*****************************************************************************/
+/*
+/* Posts
+/*
+/*****************************************************************************/
+
+#post {
+
+}
+
+  /* standard */
+
+  #post pre {
+    border: 1px solid #ddd;
+    background-color: #eef;
+    padding: 0 .4em;
+  }
+
+  #post ul,
+  #post ol {
+    margin-left: 1.35em;
+  }
+
+  #post code {
+    border: 1px solid #ddd;
+    background-color: #eef;
+    font-size: 85%;
+    padding: 0 .2em;
+  }
+
+    #post pre code {
+      border: none;
+    }
+
+  #post img {
+    max-width: 42em;
+    padding: 1em 0;
+  }
+
+  /* terminal */
+
+  #post pre.terminal {
+    border: 1px solid black;
+    background-color: #333;
+    color: white;
+  }
+
+  #post pre.terminal code {
+    background-color: #333;
+  }
+
+#related {
+  margin-top: 2em;
+}
+
+  #related h2 {
+    margin-bottom: 1em;
+  }
