--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <article>
-    <h1><a href="/">dallas borealis</a></h1>
+    <h1><a href="/">dallas borealis</a> &#8250; see | save | share</h1>
     <section>
 
       {{ content }}
