--- a/css/screen.css
+++ b/css/screen.css
@@ -1,56 +1,75 @@
-* {
-  margin: 0;
-  padding: 0;
+@charset "UTF-8";
+
+html {
+    font-size: 15px;
 }
 
 body {
-  width: 87.5%;
-  margin-left: auto
-  margin-right: auto;
-  padding-left: 12.5%;
-  font-family: 'Source Sans Pro', sans-serif;
-  background-color: #fcfcfa;
-  color: #333;
-  max-width: 1400px;
+    width: 87.5%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 12.5%;
+    font-family: 'Source Sans Pro', sans-serif;
+    background-color: #fcfcfa;
+    color: #444;
+    max-width: 1400px;
+    counter-reset: sidenote-counter;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
+/* Adds dark mode */
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #151515;
+        color: #ddd;
+    }
 }
 
 h1 {
-  margin-bottom: 1em;
+    font-weight: 400;
+    margin-top: 4rem;
+    margin-bottom: 1.5rem;
+    font-size: 3.2rem;
+    line-height: 1;
 }
 
-p {
-  margin: 1em 0;
+h2 {
+    font-style: italic;
+    font-weight: 400;
+    margin-top: 2.1rem;
+    margin-bottom: 1.4rem;
+    font-size: 2.2rem;
+    line-height: 1;
+}
+
+h3 {
+    font-style: italic;
+    font-weight: 400;
+    font-size: 1.7rem;
+    margin-top: 2rem;
+    margin-bottom: 1.4rem;
+    line-height: 1;
 }
 
 p.subtitle {
+    font-style: italic;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    font-size: 80%;
+    font-size: 1.8rem;
     display: block;
     line-height: 1;
     color: #aaa;
 }
 
-ul.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
+.numeral {
+    font-family: et-book-roman-old-style;
 }
 
-ul.posts li {
-  /* line-height: 1.75em; */
-}
-
-ul.posts span {
-  color: #aaa;
-  font-size: 80%;
+.danger {
+    color: red;
 }
 
 article {
-    padding: 5rem 0rem;
+    padding: 4rem 0rem;
 }
 
 section {
@@ -58,18 +77,26 @@ section {
     padding-bottom: 1rem;
 }
 
-a { color: rgba(10, 132, 255, 1); text-decoration: none; }
-a:hover { text-decoration: underline; }
-a:visited { color:rgba(10, 132, 255, 1); }
+p,
+dl,
+ol,
+ul {
+    font-size: 1.4rem;
+    line-height: 2rem;
+}
+ul.posts {
+  list-style-type: none;
+  margin-bottom: 2em;
+}
+ul.posts span {
+  color: #aaa;
+}
 
 p {
     margin-top: 1.4rem;
     margin-bottom: 1.4rem;
     padding-right: 0;
     vertical-align: baseline;
-}
-p.meta {
-  color: #aaa;
 }
 
 /* Chapter Epigraphs */
@@ -118,12 +145,12 @@ section > table {
 }
 
 /* 50 + 5 == 55, to be the same width as paragraph */
-/* section > dl,
+section > dl,
 section > ol,
 section > ul {
     width: 50%;
     -webkit-padding-start: 5%;
-} */
+}
 
 dt:not(:first-child),
 li:not(:first-child) {
@@ -158,6 +185,12 @@ figure.fullwidth figcaption {
     margin-right: 24%;
 }
 
+a { color: rgba(10, 132, 255, 1); text-decoration: none; }
+a:hover { text-decoration: underline; }
+a:visited { color:rgba(10, 132, 255, 1); }
+
+
+
 /* Sidenotes, margin notes, figures, captions */
 img {
     max-width: 100%;
@@ -171,7 +204,7 @@ img {
     width: 50%;
     margin-top: 0.3rem;
     margin-bottom: 0;
-    /* font-size: 1.1rem; */
+    font-size: 1.1rem;
     line-height: 1.3;
     vertical-align: baseline;
     position: relative;
@@ -373,133 +406,3 @@ label.margin-toggle:not(.sidenote-number) {
         width: 100%;
     }
 }
-
-
-/*****************************************************************************/
-/*
-/* Site
-/*
-/*****************************************************************************/
-
-.site {
-  font-size: 110%;
-  text-align: justify;
-  width: 42em;
-  margin: 3em auto 2em auto;
-  line-height: 1.5em;
-}
-
-.title {
-  color: #a00;
-  font-weight: bold;
-  margin-bottom: 2em;
-}
-
-  .site .title a {
-    color: #a00;
-    text-decoration: none;
-  }
-
-  .site .title a:hover {
-    color: black;
-  }
-
-  .site .title a.extra {
-    color: #aaa;
-    text-decoration: none;
-    margin-left: 1em;
-  }
-
-  .site .title a.extra:hover {
-    color: black;
-  }
-
-  .site .meta {
-    color: #aaa;
-  }
-
-  .site .footer {
-    font-size: 80%;
-    color: #666;
-    border-top: 4px solid #eee;
-    margin-top: 2em;
-    overflow: hidden;
-  }
-
-    .site .footer .contact {
-      float: left;
-      margin-right: 3em;
-    }
-
-      .site .footer .contact a {
-        color: #8085C1;
-      }
-
-    .site .footer .rss {
-      margin-top: 1.1em;
-      margin-right: -.2em;
-      float: right;
-    }
-
-      .site .footer .rss img {
-        border: 0;
-      }
-
-/*****************************************************************************/
-/*
-/* Posts
-/*
-/*****************************************************************************/
-
-#post {
-
-}
-
-  /* standard */
-
-  #post pre {
-    border: 1px solid #ddd;
-    background-color: #eef;
-    padding: 0 .4em;
-  }
-
-  #post ul,
-  #post ol {
-    margin-left: 1.35em;
-  }
-
-  #post code {
-    border: 1px solid #ddd;
-    background-color: #eef;
-    font-size: 85%;
-    padding: 0 .2em;
-  }
-
-    #post pre code {
-      border: none;
-    }
-
-  #post img {
-    max-width: 42em;
-    padding: 1em 0;
-  }
-
-  /* terminal */
-
-  #post pre.terminal {
-    border: 1px solid black;
-    background-color: #333;
-    color: white;
-  }
-
-  #post pre.terminal code {
-    background-color: #333;
-  }
-
-#related {
-  margin-top: 2em;
-}
-
-  #related h2 {
-    margin-bottom: 1em;
-  }
