--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,12 @@
 <head>
    <meta charset="utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="dallas borealis" />
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
-
+   <link rel="stylesheet" href="/css/screen.css"/>
 </head>
 <body>
   <article>
-     <section>
-    <h1><a href="/">dallas borealis</a> &#8250; see | save | share</h1>
-    </section>
+    <h3><a href="/">dallas borealis</a> &#8250; see | save | share</h3>
 
       {{ content }}
        
