--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <article>
-    <h3><a href="/">dallas borealis</a> &#8250; see | save | share</h3>
+    <nav><a href="/">dallas borealis</a> &#8250; see | save | share</nav>
 
       {{ content }}
        
