--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,20 +3,24 @@
 <head>
    <meta charset="utf-8" />
    <title>{{ page.title }}</title>
+   <meta name="author" content="dallas borealis" />
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="/css/screen.css"/>
+   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+
 </head>
 <body>
   <article>
-    <nav><a href="/">dallas borealis</a> &#8250; see | save | share</nav>
+    <nav>
+      <p>
+        <a href="/">dallas borealis</a> &#8250; see | save | share
+      </p>
+    </nav>
 
-      {{ content }}
-       
-   <section>
-      <p class="subtitle">
-         dallas borealis &#8250; see | save | share
-       </p>
-    </section>
+    {{ content }}
+
+    <p class="subtitle">
+    dallas borealis &#8250; see | save | share
+    </p>
   </article>
 
 </body>
