--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,19 +9,22 @@
 
 </head>
 <body>
+  <nav>
+    <p>
+      <a href="/">dallas borealis</a> &#8250; see | save | share
+    </p>
+  </nav>
   <article>
-    <nav>
-      <p>
-        <a href="/">dallas borealis</a> &#8250; see | save | share
-      </p>
-    </nav>
 
     {{ content }}
 
-    <p class="subtitle">
-    dallas borealis &#8250; see | save | share
-    </p>
   </article>
+  <footer>
+    <p class="subtitle">
+      dallas borealis &#8250; see | save | share
+    </p>
+  </footer>
+
 
 </body>
 </html>
