--- a/css/screen.css
+++ b/css/screen.css
@@ -10,8 +10,8 @@ body {
     margin-right: auto;
     padding-left: 12.5%;
     font-family: 'Source Sans Pro', sans-serif;
-    background-color: #fcfcfa;
-    color: #444;
+    background-color: #fff;
+    color: #333;
     max-width: 1400px;
     counter-reset: sidenote-counter;
 }
