--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,9 @@
 
   </article>
   <footer>
-    <p class="subtitle">
-      dallas borealis &#8250; see | save | share
+    <p>
+      dallas borealis <br />
+      see | save | share
     </p>
   </footer>
 
