--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
    <title>{{ page.title }}</title>
    <meta name="author" content="dallas borealis" />
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen" />
+   <link rel="stylesheet" href="/css/tufte.css" type="text/css" media="screen" />
 
 </head>
 <body>
