--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section>
   {{ content }}
-</section>section>
+</section>
 <section>
   <h2>Related posts</h2>
   <ul class="posts">
