--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,26 +5,32 @@
    <title>{{ page.title }}</title>
    <meta name="author" content="dallas borealis" />
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="/css/tufte.css" type="text/css" media="screen" />
+   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
 </head>
 <body>
-  <nav>
-    <p>
-      <a href="/">dallas borealis</a> &#8250; see | save | share
-    </p>
-  </nav>
-  <article>
+   <div class="site">
+      <div class="title">
+         <a href="/">dallas borealis</a> &#8250; see | save | share
+      </div>
 
     {{ content }}
 
-  </article>
-  <footer>
-    <p>
-      dallas borealis <br />
-      see | save | share
-    </p>
-  </footer>
+  <div class="footer">
+    <div class="contact">
+       <p>
+         dallas borealis <br />
+         see | save | share
+       </p>
+     </div>
+     <div class="contact">
+        <p>
+           <a href="http://instagram/">instagram</a><br />
+        </p>
+     </div>
+     <div class="rss">
+     </div>
+  </div>
 
 
 </body>
