--- a/css/screen.css
+++ b/css/screen.css
@@ -1,410 +1,197 @@
-@charset "UTF-8";
+/*****************************************************************************/
+/*
+/* Common
+/*
+/*****************************************************************************/
 
-html {
-    font-size: 15px;
+/* Global Reset */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
 }
 
 body {
-    width: 87.5%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 12.5%;
-    font-family: 'Source Sans Pro', sans-serif;
-    background-color: #fff;
-    color: #333;
-    max-width: 1400px;
-    counter-reset: sidenote-counter;
+  background-color: white;
+  font: 13.34px helvetica, arial, clean, sans-serif;
+  *font-size: small;
+  text-align: center;
 }
 
-/* Adds dark mode */
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #151515;
-        color: #ddd;
-    }
+h1, h2, h3, h4, h5, h6 {
+  font-size: 100%;
 }
 
 h1 {
-    font-weight: 400;
-    margin-top: 4rem;
-    margin-bottom: 1.5rem;
-    font-size: 3.2rem;
-    line-height: 1;
-}
-
-h2 {
-    font-style: italic;
-    font-weight: 400;
-    margin-top: 2.1rem;
-    margin-bottom: 1.4rem;
-    font-size: 2.2rem;
-    line-height: 1;
-}
-
-h3 {
-    font-style: italic;
-    font-weight: 400;
-    font-size: 1.7rem;
-    margin-top: 2rem;
-    margin-bottom: 1.4rem;
-    line-height: 1;
-}
-
-p.subtitle {
-    font-style: italic;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    font-size: 1.8rem;
-    display: block;
-    line-height: 1;
-    color: #aaa;
-}
-
-.numeral {
-    font-family: et-book-roman-old-style;
-}
-
-.danger {
-    color: red;
-}
-
-article {
-    padding: 4rem 0rem;
-}
-
-section {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
-
-p,
-dl,
-ol,
-ul {
-    font-size: 1.4rem;
-    line-height: 2rem;
-    width: 55%;
-}
-ul.posts {
-    padding: 0;
-  list-style-type: none;
-  margin-bottom: 2em;
-}
-ul.posts span {
-  color: #aaa;
+  margin-bottom: 1em;
 }
 
 p {
-    margin-top: 1.4rem;
-    margin-bottom: 1.4rem;
-    padding-right: 0;
-    vertical-align: baseline;
+  margin: 1em 0;
 }
 
-/* Chapter Epigraphs */
-div.epigraph {
-    margin: 5em 0;
+a {
+  color: #00a;
 }
 
-div.epigraph > blockquote {
-    margin-top: 3em;
-    margin-bottom: 3em;
+a:hover {
+  color: black;
 }
 
-div.epigraph > blockquote,
-div.epigraph > blockquote > p {
-    font-style: italic;
+a:visited {
+  color: #a0a;
 }
 
-div.epigraph > blockquote > footer {
-    font-style: normal;
+table {
+  font-size: inherit;
+  font: 100%;
 }
 
-div.epigraph > blockquote > footer > cite {
-    font-style: italic;
-}
-/* end chapter epigraphs styles */
+/*****************************************************************************/
+/*
+/* Home
+/*
+/*****************************************************************************/
 
-blockquote {
-    font-size: 1.4rem;
-}
-
-blockquote p {
-    width: 55%;
-    margin-right: 40px;
+ul.posts {
+  list-style-type: none;
+  margin-bottom: 2em;
 }
 
-blockquote footer {
-    width: 55%;
-    font-size: 1.1rem;
-    text-align: right;
+  ul.posts li {
+    line-height: 1.75em;
+  }
+
+  ul.posts span {
+    color: #aaa;
+    font-family: Monaco, "Courier New", monospace;
+    font-size: 80%;
+  }
+
+/*****************************************************************************/
+/*
+/* Site
+/*
+/*****************************************************************************/
+
+.site {
+  font-size: 110%;
+  text-align: justify;
+  width: 40em;
+  margin: 3em auto 2em auto;
+  line-height: 1.5em;
 }
 
-section > p,
-section > footer,
-section > table {
-    width: 55%;
+.title {
+  color: #a00;
+  font-weight: bold;
+  margin-bottom: 2em;
 }
 
-/* 50 + 5 == 55, to be the same width as paragraph */
-section > dl,
-section > ol,
-section > ul {
-    width: 50%;
-    -webkit-padding-start: 5%;
-}
+  .site .title a {
+    color: #a00;
+    text-decoration: none;
+  }
 
-dt:not(:first-child),
-li:not(:first-child) {
-    margin-top: 0.25rem;
-}
+  .site .title a:hover {
+    color: black;
+  }
 
-figure {
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-    max-width: 55%;
-    -webkit-margin-start: 0;
-    -webkit-margin-end: 0;
-    margin: 0 0 3em 0;
-}
+  .site .title a.extra {
+    color: #aaa;
+    text-decoration: none;
+    margin-left: 1em;
+  }
 
-figcaption {
-    float: right;
-    clear: right;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 1.1rem;
-    line-height: 1.6;
-    vertical-align: baseline;
-    position: relative;
-    max-width: 40%;
-}
+  .site .title a.extra:hover {
+    color: black;
+  }
 
-figure.fullwidth figcaption {
-    margin-right: 24%;
-}
+  .site .meta {
+    color: #aaa;
+  }
 
-a { color: rgba(10, 132, 255, 1); text-decoration: none; }
-a:hover { text-decoration: underline; }
-a:visited { color:rgba(10, 132, 255, 1); }
+  .site .footer {
+    font-size: 80%;
+    color: #666;
+    border-top: 4px solid #eee;
+    margin-top: 2em;
+    overflow: hidden;
+  }
 
-
-
-/* Sidenotes, margin notes, figures, captions */
-img {
-    max-width: 100%;
-}
-
-.sidenote,
-.marginnote {
-    float: right;
-    clear: right;
-    margin-right: -60%;
-    width: 50%;
-    margin-top: 0.3rem;
-    margin-bottom: 0;
-    font-size: 1.1rem;
-    line-height: 1.3;
-    vertical-align: baseline;
-    position: relative;
-}
-
-.sidenote-number {
-    counter-increment: sidenote-counter;
-}
-
-.sidenote-number:after,
-.sidenote:before {
-    font-family: et-book-roman-old-style;
-    position: relative;
-    vertical-align: baseline;
-}
-
-.sidenote-number:after {
-    content: counter(sidenote-counter);
-    font-size: 1rem;
-    top: -0.5rem;
-    left: 0.1rem;
-}
-
-.sidenote:before {
-    content: counter(sidenote-counter) " ";
-    font-size: 1rem;
-    top: -0.5rem;
-}
-
-blockquote .sidenote,
-blockquote .marginnote {
-    margin-right: -82%;
-    min-width: 59%;
-    text-align: left;
-}
-
-div.fullwidth,
-table.fullwidth {
-    width: 100%;
-}
-
-div.table-wrapper {
-    overflow-x: auto;
-    font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif;
-}
-
-.sans {
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
-    letter-spacing: .03em;
-}
-
-code, pre > code {
-    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-    font-size: 1.0rem;
-    line-height: 1.42;
-    -webkit-text-size-adjust: 100%; /* Prevent adjustments of font size after orientation changes in iOS. See https://github.com/edwardtufte/tufte-css/issues/81#issuecomment-261953409 */
-}
-
-.sans > code {
-    font-size: 1.2rem;
-}
-
-h1 > code,
-h2 > code,
-h3 > code {
-    font-size: 0.80em;
-}
-
-.marginnote > code,
-.sidenote > code {
-    font-size: 1rem;
-}
-
-pre > code {
-    font-size: 0.9rem;
-    width: 52.5%;
-    margin-left: 2.5%;
-    overflow-x: auto;
-    display: block;
-}
-
-pre.fullwidth > code {
-    width: 90%;
-}
-
-.fullwidth {
-    max-width: 90%;
-    clear:both;
-}
-
-span.newthought {
-    font-variant: small-caps;
-    font-size: 1.2em;
-}
-
-input.margin-toggle {
-    display: none;
-}
-
-label.sidenote-number {
-    display: inline-block;
-    max-height: 2rem; /* should be less than or equal to paragraph line-height */
-}
-
-label.margin-toggle:not(.sidenote-number) {
-    display: none;
-}
-
-.iframe-wrapper {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    padding-top: 25px;
-    height: 0;
-}
-
-.iframe-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-@media (max-width: 760px) {
-    body {
-        width: 84%;
-        padding-left: 8%;
-        padding-right: 8%;
+    .site .footer .contact {
+      float: left;
+      margin-right: 3em;
     }
 
-    hr,
-    section > p,
-    section > footer,
-    section > table {
-        width: 100%;
+      .site .footer .contact a {
+        color: #8085C1;
+      }
+
+    .site .footer .rss {
+      margin-top: 1.1em;
+      margin-right: -.2em;
+      float: right;
     }
 
-    pre > code {
-        width: 97%;
-    }
+      .site .footer .rss img {
+        border: 0;
+      }
 
-    section > dl,
-    section > ol,
-    section > ul {
-        width: 90%;
-    }
+/*****************************************************************************/
+/*
+/* Posts
+/*
+/*****************************************************************************/
 
-    figure {
-        max-width: 90%;
-    }
+#post {
 
-    figcaption,
-    figure.fullwidth figcaption {
-        margin-right: 0%;
-        max-width: none;
-    }
-
-    blockquote {
-        margin-left: 1.5em;
-        margin-right: 0em;
-    }
-
-    blockquote p,
-    blockquote footer {
-        width: 100%;
-    }
-
-    label.margin-toggle:not(.sidenote-number) {
-        display: inline;
-    }
-
-    .sidenote,
-    .marginnote {
-        display: none;
-    }
-
-    .margin-toggle:checked + .sidenote,
-    .margin-toggle:checked + .marginnote {
-        display: block;
-        float: left;
-        left: 1rem;
-        clear: both;
-        width: 95%;
-        margin: 1rem 2.5%;
-        vertical-align: baseline;
-        position: relative;
-    }
-
-    label {
-        cursor: pointer;
-    }
-
-    div.table-wrapper,
-    table {
-        width: 85%;
-    }
-
-    img {
-        width: 100%;
-    }
 }
+
+  /* standard */
+
+  #post pre {
+    border: 1px solid #ddd;
+    background-color: #eef;
+    padding: 0 .4em;
+  }
+
+  #post ul,
+  #post ol {
+    margin-left: 1.35em;
+  }
+
+  #post code {
+    border: 1px solid #ddd;
+    background-color: #eef;
+    font-size: 85%;
+    padding: 0 .2em;
+  }
+
+    #post pre code {
+      border: none;
+    }
+
+  /* terminal */
+
+  #post pre.terminal {
+    border: 1px solid black;
+    background-color: #333;
+    color: white;
+  }
+
+  #post pre.terminal code {
+    background-color: #333;
+  }
+
+#related {
+  margin-top: 2em;
+}
+
+  #related h2 {
+    margin-bottom: 1em;
+  }
