--- a/css/tufte.css
+++ b/css/tufte.css
@@ -21,7 +21,7 @@ body {
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #151515;
-        color: #ddd;
+        color: #999;
     }
 }
 
