--- a/css/screen.css
+++ b/css/screen.css
@@ -41,6 +41,7 @@ p + p {
 
 a {
   color: #0f5cb2;
+  text-decoration: none;
 }
 
 a:hover {
@@ -86,7 +87,7 @@ ul.posts {
 .site {
   font-size: 110%;
   text-align: justify;
-  width: 40em;
+  width: 55%;
   margin: 3em auto 2em auto;
   line-height: 1.5em;
 }
@@ -103,7 +104,7 @@ ul.posts {
   }
 
   .site .title a:hover {
-    color: black;
+    opacity: 0.8;
   }
 
   .site .title a.extra {
